# sop-automator

./: README.md  app.py  critic_agent_test.py  hyderabad_weather.md  main.py  pyproject.toml
